Fix spacing

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -3,14 +3,14 @@
 body
     background-color: default.$background-normal-color
     color: default.$text-normal-color
-    font-family: "Roboto Mono"
+    font-family: default.$text-normal-font
     margin: 0
 
 #loadingScreen
     color: default.$text-error-color
     font-weight: default.$text-error-weight
     text-align: center
-    margin-top: 68px
+    margin-top: default.$bar-normal-spacing
     h1
         color: default.$text-normal-color
         font-size: 48px
@@ -37,7 +37,7 @@ body
 
 #app
     margin: 8px
-    margin-top: 68px
+    margin-top: default.$bar-normal-spacing
     overflow: auto
 
 #totalNumbers
