--- a/sass/themes/_default.sass
+++ b/sass/themes/_default.sass
@@ -4,13 +4,14 @@ $background-normal-color: #222
 $bar-normal-color: #000
 $bar-normal-gradient: linear-gradient(30deg, #f08, #f80)
 $bar-normal-weight: 700
+$bar-normal-spacing: 80px
 
 
 $text-normal-color: #fff
 $text-error-color: #f00
 $text-error-weight: 700
 
-$text-normal-font: monospace
+$text-normal-font: "Roboto Mono"
 
 
 $list-chapter-color: #333
